parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list SEMICOLON
Rule 2     stmt_list -> stmt_list SEMICOLON stmt
Rule 3     stmt_list -> stmt
Rule 4     stmt -> assignment
Rule 5     stmt -> read
Rule 6     stmt -> write
Rule 7     stmt -> while
Rule 8     stmt -> repeat
Rule 9     stmt -> block
Rule 10    stmt -> foreach
Rule 11    stmt -> if_stmt
Rule 12    block -> BEGIN stmt_list END
Rule 13    foreach -> FOREACH ID IN LPAREN a_fact COLON a_fact RPAREN stmt
Rule 14    while -> WHILE l_expr block
Rule 15    repeat -> REPEAT stmt_list UNTIL l_expr
Rule 16    if_stmt -> IF l_expr THEN stmt_list ELSE else_stmt
Rule 17    else_stmt -> <empty>
Rule 18    else_stmt -> ELSE stmt
Rule 19    assignment -> varref ASSIGN l_expr
Rule 20    a_expr -> a_expr ADD a_term
Rule 21    a_expr -> a_expr SUB a_term
Rule 22    a_expr -> a_term
Rule 23    a_term -> a_term MUL a_fact
Rule 24    a_term -> a_term DIV a_fact
Rule 25    a_term -> a_fact
Rule 26    a_fact -> varref
Rule 27    a_fact -> NUM
Rule 28    a_fact -> LITERAL_STR
Rule 29    a_fact -> SUB a_fact
Rule 30    a_fact -> LPAREN a_expr RPAREN
Rule 31    varref -> ID
Rule 32    varref -> varref LBRACK a_expr RBRACK
Rule 33    l_expr -> l_expr AND l_term
Rule 34    l_expr -> l_term
Rule 35    l_term -> l_term OR l_fact
Rule 36    l_term -> l_fact
Rule 37    l_fact -> l_fact oprel a_expr
Rule 38    l_fact -> a_expr
Rule 39    l_fact -> LPAREN l_expr RPAREN
Rule 40    oprel -> LT
Rule 41    oprel -> GT
Rule 42    oprel -> LEQ
Rule 43    oprel -> GEQ
Rule 44    oprel -> EQ
Rule 45    oprel -> NEQ
Rule 46    read -> READ varlist
Rule 47    write -> WRITE expr_list
Rule 48    varlist -> varref
Rule 49    varlist -> varref COMMA_DELIM varlist
Rule 50    expr_list -> a_expr
Rule 51    expr_list -> expr_list COMMA_DELIM a_expr

Terminals, with rules where they appear

ADD                  : 20
AND                  : 33
ASSIGN               : 19
BEGIN                : 12
COLON                : 13
COMMA_DELIM          : 49 51
COMMENT              : 
DIV                  : 24
ELSE                 : 16 18
END                  : 12
EQ                   : 44
FOREACH              : 13
GEQ                  : 43
GT                   : 41
ID                   : 13 31
IF                   : 16
IN                   : 13
LBRACK               : 32
LEQ                  : 42
LITERAL_STR          : 28
LPAREN               : 13 30 39
LT                   : 40
MUL                  : 23
NEQ                  : 45
NUM                  : 27
OR                   : 35
RBRACK               : 32
READ                 : 46
REPEAT               : 15
RPAREN               : 13 30 39
SEMICOLON            : 1 2
SUB                  : 21 29
THEN                 : 16
UNTIL                : 15
WHILE                : 14
WRITE                : 47
error                : 

Nonterminals, with rules where they appear

a_expr               : 20 21 30 32 37 38 50 51
a_fact               : 13 13 23 24 25 29
a_term               : 20 21 22 23 24
assignment           : 4
block                : 9 14
else_stmt            : 16
expr_list            : 47 51
foreach              : 10
if_stmt              : 11
l_expr               : 14 15 16 19 33 39
l_fact               : 35 36 37
l_term               : 33 34 35
oprel                : 37
program              : 0
read                 : 5
repeat               : 8
stmt                 : 2 3 13 18
stmt_list            : 1 2 12 15 16
varlist              : 46 49
varref               : 19 26 32 48 49
while                : 7
write                : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list SEMICOLON
    (2) stmt_list -> . stmt_list SEMICOLON stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . assignment
    (5) stmt -> . read
    (6) stmt -> . write
    (7) stmt -> . while
    (8) stmt -> . repeat
    (9) stmt -> . block
    (10) stmt -> . foreach
    (11) stmt -> . if_stmt
    (19) assignment -> . varref ASSIGN l_expr
    (46) read -> . READ varlist
    (47) write -> . WRITE expr_list
    (14) while -> . WHILE l_expr block
    (15) repeat -> . REPEAT stmt_list UNTIL l_expr
    (12) block -> . BEGIN stmt_list END
    (13) foreach -> . FOREACH ID IN LPAREN a_fact COLON a_fact RPAREN stmt
    (16) if_stmt -> . IF l_expr THEN stmt_list ELSE else_stmt
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    READ            shift and go to state 13
    WRITE           shift and go to state 14
    WHILE           shift and go to state 15
    REPEAT          shift and go to state 16
    BEGIN           shift and go to state 17
    FOREACH         shift and go to state 18
    IF              shift and go to state 20
    ID              shift and go to state 19

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3
    assignment                     shift and go to state 4
    read                           shift and go to state 5
    write                          shift and go to state 6
    while                          shift and go to state 7
    repeat                         shift and go to state 8
    block                          shift and go to state 9
    foreach                        shift and go to state 10
    if_stmt                        shift and go to state 11
    varref                         shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list . SEMICOLON
    (2) stmt_list -> stmt_list . SEMICOLON stmt

    SEMICOLON       shift and go to state 21


state 3

    (3) stmt_list -> stmt .

    SEMICOLON       reduce using rule 3 (stmt_list -> stmt .)
    UNTIL           reduce using rule 3 (stmt_list -> stmt .)
    END             reduce using rule 3 (stmt_list -> stmt .)
    ELSE            reduce using rule 3 (stmt_list -> stmt .)


state 4

    (4) stmt -> assignment .

    SEMICOLON       reduce using rule 4 (stmt -> assignment .)
    UNTIL           reduce using rule 4 (stmt -> assignment .)
    END             reduce using rule 4 (stmt -> assignment .)
    ELSE            reduce using rule 4 (stmt -> assignment .)


state 5

    (5) stmt -> read .

    SEMICOLON       reduce using rule 5 (stmt -> read .)
    UNTIL           reduce using rule 5 (stmt -> read .)
    END             reduce using rule 5 (stmt -> read .)
    ELSE            reduce using rule 5 (stmt -> read .)


state 6

    (6) stmt -> write .

    SEMICOLON       reduce using rule 6 (stmt -> write .)
    UNTIL           reduce using rule 6 (stmt -> write .)
    END             reduce using rule 6 (stmt -> write .)
    ELSE            reduce using rule 6 (stmt -> write .)


state 7

    (7) stmt -> while .

    SEMICOLON       reduce using rule 7 (stmt -> while .)
    UNTIL           reduce using rule 7 (stmt -> while .)
    END             reduce using rule 7 (stmt -> while .)
    ELSE            reduce using rule 7 (stmt -> while .)


state 8

    (8) stmt -> repeat .

    SEMICOLON       reduce using rule 8 (stmt -> repeat .)
    UNTIL           reduce using rule 8 (stmt -> repeat .)
    END             reduce using rule 8 (stmt -> repeat .)
    ELSE            reduce using rule 8 (stmt -> repeat .)


state 9

    (9) stmt -> block .

    SEMICOLON       reduce using rule 9 (stmt -> block .)
    UNTIL           reduce using rule 9 (stmt -> block .)
    END             reduce using rule 9 (stmt -> block .)
    ELSE            reduce using rule 9 (stmt -> block .)


state 10

    (10) stmt -> foreach .

    SEMICOLON       reduce using rule 10 (stmt -> foreach .)
    UNTIL           reduce using rule 10 (stmt -> foreach .)
    END             reduce using rule 10 (stmt -> foreach .)
    ELSE            reduce using rule 10 (stmt -> foreach .)


state 11

    (11) stmt -> if_stmt .

    SEMICOLON       reduce using rule 11 (stmt -> if_stmt .)
    UNTIL           reduce using rule 11 (stmt -> if_stmt .)
    END             reduce using rule 11 (stmt -> if_stmt .)
    ELSE            reduce using rule 11 (stmt -> if_stmt .)


state 12

    (19) assignment -> varref . ASSIGN l_expr
    (32) varref -> varref . LBRACK a_expr RBRACK

    ASSIGN          shift and go to state 22
    LBRACK          shift and go to state 23


state 13

    (46) read -> READ . varlist
    (48) varlist -> . varref
    (49) varlist -> . varref COMMA_DELIM varlist
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    ID              shift and go to state 19

    varlist                        shift and go to state 24
    varref                         shift and go to state 25

state 14

    (47) write -> WRITE . expr_list
    (50) expr_list -> . a_expr
    (51) expr_list -> . expr_list COMMA_DELIM a_expr
    (20) a_expr -> . a_expr ADD a_term
    (21) a_expr -> . a_expr SUB a_term
    (22) a_expr -> . a_term
    (23) a_term -> . a_term MUL a_fact
    (24) a_term -> . a_term DIV a_fact
    (25) a_term -> . a_fact
    (26) a_fact -> . varref
    (27) a_fact -> . NUM
    (28) a_fact -> . LITERAL_STR
    (29) a_fact -> . SUB a_fact
    (30) a_fact -> . LPAREN a_expr RPAREN
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    NUM             shift and go to state 32
    LITERAL_STR     shift and go to state 33
    SUB             shift and go to state 29
    LPAREN          shift and go to state 34
    ID              shift and go to state 19

    expr_list                      shift and go to state 26
    a_expr                         shift and go to state 27
    a_term                         shift and go to state 28
    a_fact                         shift and go to state 30
    varref                         shift and go to state 31

state 15

    (14) while -> WHILE . l_expr block
    (33) l_expr -> . l_expr AND l_term
    (34) l_expr -> . l_term
    (35) l_term -> . l_term OR l_fact
    (36) l_term -> . l_fact
    (37) l_fact -> . l_fact oprel a_expr
    (38) l_fact -> . a_expr
    (39) l_fact -> . LPAREN l_expr RPAREN
    (20) a_expr -> . a_expr ADD a_term
    (21) a_expr -> . a_expr SUB a_term
    (22) a_expr -> . a_term
    (23) a_term -> . a_term MUL a_fact
    (24) a_term -> . a_term DIV a_fact
    (25) a_term -> . a_fact
    (26) a_fact -> . varref
    (27) a_fact -> . NUM
    (28) a_fact -> . LITERAL_STR
    (29) a_fact -> . SUB a_fact
    (30) a_fact -> . LPAREN a_expr RPAREN
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    LPAREN          shift and go to state 39
    NUM             shift and go to state 32
    LITERAL_STR     shift and go to state 33
    SUB             shift and go to state 29
    ID              shift and go to state 19

    l_expr                         shift and go to state 35
    l_term                         shift and go to state 36
    l_fact                         shift and go to state 37
    a_expr                         shift and go to state 38
    a_term                         shift and go to state 28
    a_fact                         shift and go to state 30
    varref                         shift and go to state 31

state 16

    (15) repeat -> REPEAT . stmt_list UNTIL l_expr
    (2) stmt_list -> . stmt_list SEMICOLON stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . assignment
    (5) stmt -> . read
    (6) stmt -> . write
    (7) stmt -> . while
    (8) stmt -> . repeat
    (9) stmt -> . block
    (10) stmt -> . foreach
    (11) stmt -> . if_stmt
    (19) assignment -> . varref ASSIGN l_expr
    (46) read -> . READ varlist
    (47) write -> . WRITE expr_list
    (14) while -> . WHILE l_expr block
    (15) repeat -> . REPEAT stmt_list UNTIL l_expr
    (12) block -> . BEGIN stmt_list END
    (13) foreach -> . FOREACH ID IN LPAREN a_fact COLON a_fact RPAREN stmt
    (16) if_stmt -> . IF l_expr THEN stmt_list ELSE else_stmt
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    READ            shift and go to state 13
    WRITE           shift and go to state 14
    WHILE           shift and go to state 15
    REPEAT          shift and go to state 16
    BEGIN           shift and go to state 17
    FOREACH         shift and go to state 18
    IF              shift and go to state 20
    ID              shift and go to state 19

    stmt_list                      shift and go to state 40
    stmt                           shift and go to state 3
    assignment                     shift and go to state 4
    read                           shift and go to state 5
    write                          shift and go to state 6
    while                          shift and go to state 7
    repeat                         shift and go to state 8
    block                          shift and go to state 9
    foreach                        shift and go to state 10
    if_stmt                        shift and go to state 11
    varref                         shift and go to state 12

state 17

    (12) block -> BEGIN . stmt_list END
    (2) stmt_list -> . stmt_list SEMICOLON stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . assignment
    (5) stmt -> . read
    (6) stmt -> . write
    (7) stmt -> . while
    (8) stmt -> . repeat
    (9) stmt -> . block
    (10) stmt -> . foreach
    (11) stmt -> . if_stmt
    (19) assignment -> . varref ASSIGN l_expr
    (46) read -> . READ varlist
    (47) write -> . WRITE expr_list
    (14) while -> . WHILE l_expr block
    (15) repeat -> . REPEAT stmt_list UNTIL l_expr
    (12) block -> . BEGIN stmt_list END
    (13) foreach -> . FOREACH ID IN LPAREN a_fact COLON a_fact RPAREN stmt
    (16) if_stmt -> . IF l_expr THEN stmt_list ELSE else_stmt
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    READ            shift and go to state 13
    WRITE           shift and go to state 14
    WHILE           shift and go to state 15
    REPEAT          shift and go to state 16
    BEGIN           shift and go to state 17
    FOREACH         shift and go to state 18
    IF              shift and go to state 20
    ID              shift and go to state 19

    stmt_list                      shift and go to state 41
    stmt                           shift and go to state 3
    assignment                     shift and go to state 4
    read                           shift and go to state 5
    write                          shift and go to state 6
    while                          shift and go to state 7
    repeat                         shift and go to state 8
    block                          shift and go to state 9
    foreach                        shift and go to state 10
    if_stmt                        shift and go to state 11
    varref                         shift and go to state 12

state 18

    (13) foreach -> FOREACH . ID IN LPAREN a_fact COLON a_fact RPAREN stmt

    ID              shift and go to state 42


state 19

    (31) varref -> ID .

    ASSIGN          reduce using rule 31 (varref -> ID .)
    LBRACK          reduce using rule 31 (varref -> ID .)
    COMMA_DELIM     reduce using rule 31 (varref -> ID .)
    SEMICOLON       reduce using rule 31 (varref -> ID .)
    UNTIL           reduce using rule 31 (varref -> ID .)
    END             reduce using rule 31 (varref -> ID .)
    ELSE            reduce using rule 31 (varref -> ID .)
    MUL             reduce using rule 31 (varref -> ID .)
    DIV             reduce using rule 31 (varref -> ID .)
    ADD             reduce using rule 31 (varref -> ID .)
    SUB             reduce using rule 31 (varref -> ID .)
    LT              reduce using rule 31 (varref -> ID .)
    GT              reduce using rule 31 (varref -> ID .)
    LEQ             reduce using rule 31 (varref -> ID .)
    GEQ             reduce using rule 31 (varref -> ID .)
    EQ              reduce using rule 31 (varref -> ID .)
    NEQ             reduce using rule 31 (varref -> ID .)
    OR              reduce using rule 31 (varref -> ID .)
    AND             reduce using rule 31 (varref -> ID .)
    BEGIN           reduce using rule 31 (varref -> ID .)
    THEN            reduce using rule 31 (varref -> ID .)
    RBRACK          reduce using rule 31 (varref -> ID .)
    RPAREN          reduce using rule 31 (varref -> ID .)
    COLON           reduce using rule 31 (varref -> ID .)


state 20

    (16) if_stmt -> IF . l_expr THEN stmt_list ELSE else_stmt
    (33) l_expr -> . l_expr AND l_term
    (34) l_expr -> . l_term
    (35) l_term -> . l_term OR l_fact
    (36) l_term -> . l_fact
    (37) l_fact -> . l_fact oprel a_expr
    (38) l_fact -> . a_expr
    (39) l_fact -> . LPAREN l_expr RPAREN
    (20) a_expr -> . a_expr ADD a_term
    (21) a_expr -> . a_expr SUB a_term
    (22) a_expr -> . a_term
    (23) a_term -> . a_term MUL a_fact
    (24) a_term -> . a_term DIV a_fact
    (25) a_term -> . a_fact
    (26) a_fact -> . varref
    (27) a_fact -> . NUM
    (28) a_fact -> . LITERAL_STR
    (29) a_fact -> . SUB a_fact
    (30) a_fact -> . LPAREN a_expr RPAREN
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    LPAREN          shift and go to state 39
    NUM             shift and go to state 32
    LITERAL_STR     shift and go to state 33
    SUB             shift and go to state 29
    ID              shift and go to state 19

    l_expr                         shift and go to state 43
    l_term                         shift and go to state 36
    l_fact                         shift and go to state 37
    a_expr                         shift and go to state 38
    a_term                         shift and go to state 28
    a_fact                         shift and go to state 30
    varref                         shift and go to state 31

state 21

    (1) program -> stmt_list SEMICOLON .
    (2) stmt_list -> stmt_list SEMICOLON . stmt
    (4) stmt -> . assignment
    (5) stmt -> . read
    (6) stmt -> . write
    (7) stmt -> . while
    (8) stmt -> . repeat
    (9) stmt -> . block
    (10) stmt -> . foreach
    (11) stmt -> . if_stmt
    (19) assignment -> . varref ASSIGN l_expr
    (46) read -> . READ varlist
    (47) write -> . WRITE expr_list
    (14) while -> . WHILE l_expr block
    (15) repeat -> . REPEAT stmt_list UNTIL l_expr
    (12) block -> . BEGIN stmt_list END
    (13) foreach -> . FOREACH ID IN LPAREN a_fact COLON a_fact RPAREN stmt
    (16) if_stmt -> . IF l_expr THEN stmt_list ELSE else_stmt
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    $end            reduce using rule 1 (program -> stmt_list SEMICOLON .)
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    WHILE           shift and go to state 15
    REPEAT          shift and go to state 16
    BEGIN           shift and go to state 17
    FOREACH         shift and go to state 18
    IF              shift and go to state 20
    ID              shift and go to state 19

    stmt                           shift and go to state 44
    assignment                     shift and go to state 4
    read                           shift and go to state 5
    write                          shift and go to state 6
    while                          shift and go to state 7
    repeat                         shift and go to state 8
    block                          shift and go to state 9
    foreach                        shift and go to state 10
    if_stmt                        shift and go to state 11
    varref                         shift and go to state 12

state 22

    (19) assignment -> varref ASSIGN . l_expr
    (33) l_expr -> . l_expr AND l_term
    (34) l_expr -> . l_term
    (35) l_term -> . l_term OR l_fact
    (36) l_term -> . l_fact
    (37) l_fact -> . l_fact oprel a_expr
    (38) l_fact -> . a_expr
    (39) l_fact -> . LPAREN l_expr RPAREN
    (20) a_expr -> . a_expr ADD a_term
    (21) a_expr -> . a_expr SUB a_term
    (22) a_expr -> . a_term
    (23) a_term -> . a_term MUL a_fact
    (24) a_term -> . a_term DIV a_fact
    (25) a_term -> . a_fact
    (26) a_fact -> . varref
    (27) a_fact -> . NUM
    (28) a_fact -> . LITERAL_STR
    (29) a_fact -> . SUB a_fact
    (30) a_fact -> . LPAREN a_expr RPAREN
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    LPAREN          shift and go to state 39
    NUM             shift and go to state 32
    LITERAL_STR     shift and go to state 33
    SUB             shift and go to state 29
    ID              shift and go to state 19

    varref                         shift and go to state 31
    l_expr                         shift and go to state 45
    l_term                         shift and go to state 36
    l_fact                         shift and go to state 37
    a_expr                         shift and go to state 38
    a_term                         shift and go to state 28
    a_fact                         shift and go to state 30

state 23

    (32) varref -> varref LBRACK . a_expr RBRACK
    (20) a_expr -> . a_expr ADD a_term
    (21) a_expr -> . a_expr SUB a_term
    (22) a_expr -> . a_term
    (23) a_term -> . a_term MUL a_fact
    (24) a_term -> . a_term DIV a_fact
    (25) a_term -> . a_fact
    (26) a_fact -> . varref
    (27) a_fact -> . NUM
    (28) a_fact -> . LITERAL_STR
    (29) a_fact -> . SUB a_fact
    (30) a_fact -> . LPAREN a_expr RPAREN
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    NUM             shift and go to state 32
    LITERAL_STR     shift and go to state 33
    SUB             shift and go to state 29
    LPAREN          shift and go to state 34
    ID              shift and go to state 19

    varref                         shift and go to state 31
    a_expr                         shift and go to state 46
    a_term                         shift and go to state 28
    a_fact                         shift and go to state 30

state 24

    (46) read -> READ varlist .

    SEMICOLON       reduce using rule 46 (read -> READ varlist .)
    UNTIL           reduce using rule 46 (read -> READ varlist .)
    END             reduce using rule 46 (read -> READ varlist .)
    ELSE            reduce using rule 46 (read -> READ varlist .)


state 25

    (48) varlist -> varref .
    (49) varlist -> varref . COMMA_DELIM varlist
    (32) varref -> varref . LBRACK a_expr RBRACK

    SEMICOLON       reduce using rule 48 (varlist -> varref .)
    UNTIL           reduce using rule 48 (varlist -> varref .)
    END             reduce using rule 48 (varlist -> varref .)
    ELSE            reduce using rule 48 (varlist -> varref .)
    COMMA_DELIM     shift and go to state 47
    LBRACK          shift and go to state 23


state 26

    (47) write -> WRITE expr_list .
    (51) expr_list -> expr_list . COMMA_DELIM a_expr

    SEMICOLON       reduce using rule 47 (write -> WRITE expr_list .)
    UNTIL           reduce using rule 47 (write -> WRITE expr_list .)
    END             reduce using rule 47 (write -> WRITE expr_list .)
    ELSE            reduce using rule 47 (write -> WRITE expr_list .)
    COMMA_DELIM     shift and go to state 48


state 27

    (50) expr_list -> a_expr .
    (20) a_expr -> a_expr . ADD a_term
    (21) a_expr -> a_expr . SUB a_term

    COMMA_DELIM     reduce using rule 50 (expr_list -> a_expr .)
    SEMICOLON       reduce using rule 50 (expr_list -> a_expr .)
    UNTIL           reduce using rule 50 (expr_list -> a_expr .)
    END             reduce using rule 50 (expr_list -> a_expr .)
    ELSE            reduce using rule 50 (expr_list -> a_expr .)
    ADD             shift and go to state 49
    SUB             shift and go to state 50


state 28

    (22) a_expr -> a_term .
    (23) a_term -> a_term . MUL a_fact
    (24) a_term -> a_term . DIV a_fact

    ADD             reduce using rule 22 (a_expr -> a_term .)
    SUB             reduce using rule 22 (a_expr -> a_term .)
    COMMA_DELIM     reduce using rule 22 (a_expr -> a_term .)
    SEMICOLON       reduce using rule 22 (a_expr -> a_term .)
    UNTIL           reduce using rule 22 (a_expr -> a_term .)
    END             reduce using rule 22 (a_expr -> a_term .)
    ELSE            reduce using rule 22 (a_expr -> a_term .)
    LT              reduce using rule 22 (a_expr -> a_term .)
    GT              reduce using rule 22 (a_expr -> a_term .)
    LEQ             reduce using rule 22 (a_expr -> a_term .)
    GEQ             reduce using rule 22 (a_expr -> a_term .)
    EQ              reduce using rule 22 (a_expr -> a_term .)
    NEQ             reduce using rule 22 (a_expr -> a_term .)
    OR              reduce using rule 22 (a_expr -> a_term .)
    AND             reduce using rule 22 (a_expr -> a_term .)
    BEGIN           reduce using rule 22 (a_expr -> a_term .)
    THEN            reduce using rule 22 (a_expr -> a_term .)
    RBRACK          reduce using rule 22 (a_expr -> a_term .)
    RPAREN          reduce using rule 22 (a_expr -> a_term .)
    MUL             shift and go to state 51
    DIV             shift and go to state 52


state 29

    (29) a_fact -> SUB . a_fact
    (26) a_fact -> . varref
    (27) a_fact -> . NUM
    (28) a_fact -> . LITERAL_STR
    (29) a_fact -> . SUB a_fact
    (30) a_fact -> . LPAREN a_expr RPAREN
    (31) varref -> . ID
    (32) varref -> . varref LBRACK a_expr RBRACK

    NUM             shift and go to state 32
    LITERAL_STR     shift and go to state 33
    SUB             shift and go to state 29
    LPAREN          shift and go to state 34
    ID              shift and go to state 19

    a_fact                         shift and go to state 53
    varref                         shift and go to state 31

state 30

    (25) a_term -> a_fact .

    MUL             reduce using rule 25 (a_term -> a_fact .)
    DIV             reduce using rule 25 (a_term -> a_fact .)
    ADD             reduce using rule 25 (a_term -> a_fact .)
    SUB             reduce using rule 25 (a_term -> a_fact .)
    COMMA_DELIM     reduce using rule 25 (a_term -> a_fact .)
    SEMICOLON       reduce using rule 25 (a_term -> a_fact .)
    UNTIL           reduce using rule 25 (a_term -> a_fact .)
    END             reduce using rule 25 (a_term -> a_fact .)
    ELSE            reduce using rule 25 (a_term -> a_fact .)
    LT              reduce using rule 25 (a_term -> a_fact .)
    GT              reduce using rule 25 (a_term -> a_fact .)
    LEQ             reduce using rule 25 (a_term -> a_fact .)
    GEQ             reduce using rule 25 (a_term -> a_fact .)
    EQ              reduce using rule 25 (a_term -> a_fact .)
    NEQ             reduce using rule 25 (a_term -> a_fact .)
    OR              reduce using rule 25 (a_term -> a_fact .)
    AND             reduce using rule 25 (a_term -> a_fact .)
    BEGIN           reduce using rule 25 (a_term -> a_fact .)
    THEN            reduce using rule 25 (a_term -> a_fact .)
    RBRACK          reduce using rule 25 (a_term -> a_fact .)
    RPAREN          reduce using rule 25 (a_term -> a_fact .)


state 31

    (26) a_fact -> varref .
    (32) varref -> varref . LBRACK a_expr RBRACK

    MUL             reduce using rule 26 (a_fact -> varref .)
    DIV             reduce using rule 26 (a_fact -> varref .)
    ADD             reduce using rule 26 (a_fact -> varref .)
    SUB             reduce using rule 26 (a_fact -> varref .)
    COMMA_DELIM     reduce using rule 26 (a_fact -> varref .)
    SEMICOLON       reduce using rule 26 (a_fact -> varref .)
    UNTIL           reduce using rule 26 (a_fact -> varref .)
    END             reduce using rule 26 (a_fact -> varref .)
    ELSE            reduce using rule 26 (a_fact -> varref .)
    LT              reduce using rule 26 (a_fact -> varref .)
    GT              reduce using rule 26 (a_fact -> varref .)
    LEQ             reduce using rule 26 (a_fact -> varref .)
    GEQ             reduce using rule 26 (a_fact -> varref .)
    EQ              reduce using rule 26 (a_fact -> varref .)
    NEQ             reduce using rule 26 (a_fact -> varref .)
    OR              reduce using rule 26 (a_fact -> varref .)
    AND             reduce using rule 26 (a_fact -> varref .)
    BEGIN           reduce using rule 26 (a_fact -> varref .)
    THEN            reduce using rule 26 (a_fact -> varref .)
    RBRACK          reduce using rule 26 (a_fact -> varref .)
    RPAREN          reduce using rule 26 (a_fact -> varref .)
    COLON           reduce using rule 26 (a_fact -> varref .)
    LBRACK          shift and go to state 23


state 32

    (27) a_fact -> NUM .
